@@ -39,6 +39,7 @@ import javafx.event.EventHandler;
 import org.jacp.api.annotations.OnTearDown;
 import org.jacp.api.component.ICallbackComponent;
 import org.jacp.api.component.IPerspective;
+import org.jacp.api.component.IStatelessCallabackComponent;
 import org.jacp.api.component.ISubComponent;
 import org.jacp.api.workbench.IBase;
 import org.jacp.javafx.rcp.worker.AFXComponentWorker;
@@ -105,6 +106,7 @@ public class TearDownHandler {
 	 * 
 	 * @param components
 	 */
+	@SafeVarargs
 	public final static void handleAsyncTearDown(
 			ICallbackComponent<EventHandler<Event>, Event, Object>... components) {
 		final List<ICallbackComponent<EventHandler<Event>, Event, Object>> handleAsync = new ArrayList<ICallbackComponent<EventHandler<Event>, Event, Object>>();
@@ -125,6 +127,13 @@ public class TearDownHandler {
 			final List<ICallbackComponent<EventHandler<Event>, Event, Object>> components) {
 		final Set<Future<Boolean>> set = new HashSet<Future<Boolean>>();
 		for (final ICallbackComponent<EventHandler<Event>, Event, Object> component : components) {
+			if(component instanceof IStatelessCallabackComponent){
+				final IStatelessCallabackComponent<EventHandler<Event>, Event, Object>tmp = (IStatelessCallabackComponent<EventHandler<Event>, Event, Object>) component;
+				final List<ICallbackComponent<EventHandler<Event>, Event, Object>> instances = tmp.getInstances();
+				for(final ICallbackComponent<EventHandler<Event>, Event, Object> instance : instances) {
+					set.add(executor.submit(new TearDownWorker(instance)));
+				}
+			}
 			set.add(executor.submit(new TearDownWorker(component)));
 		}
 		// await termination
