@@ -1,3 +1,4 @@
+14. Dez. 2012 - amo -  TearDownHandler, update to support teardown of StatelessComponent instances
 13. Dez. 2012 - amo -  StateLessComponentRunWorker, finished shutdown of stateless components.
 13. Dez. 2012 - amo -  AStatelessCallbackComponent, set Executor service to volatile
 12. Dez. 2012 - amo -  ASubComponent, add mutex to synchronize lock handler of component
